[package]
name = "web_title_analyzer"
version = "0.1.0"
edition = "2025"
authors = ["Ertuğrul AKSOY ertunq@gmail.com"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.16.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"